# transybot

./: .env.example  .gitignore  Cargo.toml  diesel.toml  transybot_dev.db
migrations/2019-08-30-204612_create_guilds_and_users/: down.sql  up.sql
src/: main.rs
src/data/: mod.rs  queries.rs  schema.rs
src/data/enums/: channel_type.rs  join_status.rs  mod.rs  permission_type.rs  response_type.rs  role_type.rs  server_rank.rs
