[package]
name = "transybot"
version = "0.1.0"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
edition = "2018"

[dependencies]
diesel = { version="1.4.2", features = ["sqlite", "chrono"] }
dotenv = "0.14.1"
serenity = "0.7.0"
chrono = "0.4.9"
checked-enum = "0.1.1-alpha1"
auto-enum = "0.2.0-alpha1"
